Colaboratory を使用して作成しました

--- a/20220613_image_demo.ipynb
+++ b/20220613_image_demo.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "20220613_image_demo",
       "provenance": [],
-      "authorship_tag": "ABX9TyNg6o38DmD6Vl+jkzVeUzPG",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyN7xV1G8YY+RPR0U4IQz9I1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,107 +29,183 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        ">画像データの扱い\n",
+        "```\n",
+        "!pip install python-opencv-utils\n",
+        "```"
+      ],
       "metadata": {
         "id": "bYE6HsDdcitL"
-      },
-      "outputs": [],
-      "source": [
-        "# 画像データの扱い\n",
-        "\n",
-        "!pip install python-opencv-utils"
-      ]
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "%matplotlib inline\n",
+        ""
+      ],
+      "metadata": {
+        "id": "bAkt5T-R0i12"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        ">画像表示関数の準備\n",
+        "```\n",
+        "%matplotlib inline  \n",
         "import matplotlib.pyplot as plt\n",
-        "\n",
         "def imshow(image):\n",
-        "  if image.ndim == 2:\n",
-        "    plt.imshow(image, cmap='gray')\n",
-        "  elif image.ndim == 3:\n",
-        "    plt.imshow(image[..., ::-1])"
+        "  if image.ndim == 2:  \n",
+        "    plt.imshow(image, cmap='gray')  \n",
+        "  elif image.ndim == 3:  \n",
+        "    plt.imshow(image[..., ::-1])\n",
+        "```"
       ],
       "metadata": {
         "id": "IuqKTjkQxRJ5"
-      },
-      "execution_count": 18,
-      "outputs": []
+      }
     },
     {
       "cell_type": "code",
       "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "b2NOisBa0jh2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        ">URLから画像取り込み\n",
+        "```\n",
         "import cv2u\n",
         "import cv2\n",
-        "\n",
         "image = cv2u.urlread('https://futaba-dd.jp/dcguideline/images/1c_01.jpg')\n",
         "image = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
-        "imshow(image)"
+        "imshow(image)\n",
+        "```"
       ],
       "metadata": {
         "id": "IgpvOhkQdsI3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "_-taj55b0kZe"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
+        "---\n",
+        ">画像の分割\n",
+        "```\n",
         "height = image.shape[0]\n",
         "image_upper = image[:height//2]\n",
-        "image_bottom = image[height//2:]"
+        "image_bottom = image[height//2:]\n",
+        "```"
       ],
       "metadata": {
         "id": "vP2QWgLGucPy"
-      },
-      "execution_count": 21,
-      "outputs": []
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "imshow(image_upper)"
+        ""
+      ],
+      "metadata": {
+        "id": "mO9v7-bN0k9u"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "```\n",
+        "imshow(image_upper)\n",
+        "```"
       ],
       "metadata": {
         "id": "TSaerrh4vFnk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "OChleu0N0lfu"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "imshow(image_bottom)"
+        "```\n",
+        "imshow(image_bottom)\n",
+        "```"
       ],
       "metadata": {
         "id": "FLtRotouvQJ4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "1nZR-bgM0mWO"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "plt.hist(image_upper.flatten(), bins=50)\n",
-        "plt.show()"
+        "---\n",
+        ">輝度ヒストグラムの作成\n",
+        "```\n",
+        "import seaborn as sns\n",
+        "sns.set()\n",
+        "plt.hist([image_upper.flatten(), image_bottom.flatten()], bins=15, label=['upper', 'bottom'])\n",
+        "plt.xlabel('intensity')\n",
+        "plt.ylabel('area (px)')\n",
+        "plt.legend()\n",
+        "plt.show()\n",
+        "```"
       ],
       "metadata": {
         "id": "3-zFUdJWveKR"
-      },
-      "execution_count": null,
-      "outputs": []
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "plt.hist(image_bottom.flatten(), bins=50)\n",
-        "plt.show()"
+        ""
       ],
       "metadata": {
-        "id": "quGxhGS5x72x"
+        "id": "AOZ1rJU40mkO"
       },
       "execution_count": null,
       "outputs": []
