Colaboratory を使用して作成しました

--- a/Chainer_Tutorials_02_Basics_of_Python.ipynb
+++ b/Chainer_Tutorials_02_Basics_of_Python.ipynb
@@ -1245,7 +1245,9 @@
         "import time\n",
         "while True:\n",
         "  print('無限ループの例。左の停止ボタンで停止させてください')\n",
-        "  time.sleep(1)"
+        "  time.sleep(1)\n",
+        "\n",
+        "print('この行には永遠に到達しない！')"
       ],
       "metadata": {
         "id": "GX89KRZlIlvX"
@@ -1350,6 +1352,100 @@
         "`double(x)` における `x` のように、関数に渡される変数や値のことを**引数 (argument)** といいます。\n",
         "上の例は、名前が `double` で、1つの引数 `x` をとり、`2 * x` という計算を行い、その結果を表示しています。"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#練習問題\n",
+        "##モンテカルロ法による円周率の推定 \n",
+        "(http://yay.cla.kobe-u.ac.jp/~jm/edu/2016/PB/python3/python3ex01.html)  \n",
+        "![image](https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Pi_30K.gif/220px-Pi_30K.gif)  \n",
+        "モンテカルロ・シミュレーションは、コンピュータ上で仮想的に実験をしてみて、そこから結果を求める問題の解き方です。ここでは円周率を求めてみましょう。\n",
+        "一辺の長さが１の正方形に半径１の四分の１円が入っているとします。この中に、次々とダーツを投げて円の中に入った数を勘定します。投げるダーツの内で円の中に入るダーツの個数の割合は、正方形の面積と四分の一円の面積の割合と同じです。つまり、  \n",
+        "$円の中に入ったダーツの数(n_c)／投げたダーツの総数(n) = 四分の１円の面積／正方形の面積$  \n",
+        "です。沢山、ダーツを投げれば投げるほどこの値は一定になります。これを使って円周率を求めることができます。  \n",
+        "$π = 4n_c / n$  \n",
+        "となるからです。ダーツを投げるには乱数を使います。(つまり、`import random`が必要です。)  \n",
+        "`random.random() --- [0.0,1.0]の範囲の浮動小数点数を生成`  \n",
+        "投げたダーツが正方形の中に落ちる位置`(x,y)`をそれぞれ乱数で与えます。そして、$x^2 + y^2$ が1より小さければ、円の中に落ちたということになるので、`nc`を1増やします。ダーツを投げる回数を入力して、円周率を求めるプログラムを作りなさい。"
+      ],
+      "metadata": {
+        "id": "_Ur_LdoaclXi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# randomモジュールをインポートしましょう\n",
+        "# 一度インポートすれば以降のセルでも使えます\n",
+        "import random"
+      ],
+      "metadata": {
+        "id": "AmcAXpYHcklj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# random.random()がどのような値を返却するか何度か実行して確認してください\n",
+        "random.random()"
+      ],
+      "metadata": {
+        "id": "WEaeUKwAgnwU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = 100000\n",
+        "nc = 0\n",
+        "\n",
+        "for i in range(n):\n",
+        "  # x, y座標を生成する処理\n",
+        "  ...\n",
+        "  # ダーツが円の中に入ったか判定する処理\n",
+        "  ...\n",
+        "  # もし円の中ならncを1増やす処理\n",
+        "  ...\n",
+        "\n",
+        "pi = ...\n",
+        "print(pi)"
+      ],
+      "metadata": {
+        "id": "DT-4UM60g6_c"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 関数にしてみましょう\n",
+        "def calc_pi(n):\n",
+        "  ...\n",
+        "  return pi"
+      ],
+      "metadata": {
+        "id": "DBsMX2lbkHnK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# nを変えて実験してみよう\n",
+        "calc_pi(10)"
+      ],
+      "metadata": {
+        "id": "OFain4wUkROo"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
