Colaboratory を使用して作成しました

--- a/20220613_image_demo.ipynb
+++ b/20220613_image_demo.ipynb
@@ -6,7 +6,7 @@
       "name": "20220613_image_demo",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN7xV1G8YY+RPR0U4IQz9I1",
+      "authorship_tag": "ABX9TyOx8GihgGu8O1uiW75z66+q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,6 +65,7 @@
         "    plt.imshow(image, cmap='gray')  \n",
         "  elif image.ndim == 3:  \n",
         "    plt.imshow(image[..., ::-1])\n",
+        "  plt.show()\n",
         "```"
       ],
       "metadata": {
@@ -139,8 +140,11 @@
     {
       "cell_type": "markdown",
       "source": [
+        "---\n",
+        ">分割画像の表示\n",
         "```\n",
-        "imshow(image_upper)\n",
+        "imshow(image_upper)  \n",
+        "imshow(image_bottom)\n",
         "```"
       ],
       "metadata": {
@@ -154,28 +158,6 @@
       ],
       "metadata": {
         "id": "OChleu0N0lfu"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "```\n",
-        "imshow(image_bottom)\n",
-        "```"
-      ],
-      "metadata": {
-        "id": "FLtRotouvQJ4"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "1nZR-bgM0mWO"
       },
       "execution_count": null,
       "outputs": []
