Colaboratory を使用して作成しました

--- a/Chainer_Tutorials_02_Basics_of_Python.ipynb
+++ b/Chainer_Tutorials_02_Basics_of_Python.ipynb
@@ -556,7 +556,8 @@
         "リストの各要素へアクセスする方法はいくつかあります。\n",
         "最も簡単な方法は `[]` を使ってアクセスしたい要素番号を指定して、リストから値を取り出したり、その位置の値を書き換えたりする方法です。\n",
         "ここで、注意が必要な点として、Python では先頭の要素のインデックス番号が `0` である点があります。\n",
-        "インデックス番号 `1` は 2 番目の要素を指します。"
+        "インデックス番号 `1` は 2 番目の要素を指します。\n",
+        "![list](https://www.self-study-blog.com/wp-content/uploads/2020/10/python-list-slice-index-1024x576.jpg)"
       ]
     },
     {
