--- a/Chainer_Tutorials_02_Basics_of_Python.ipynb
+++ b/Chainer_Tutorials_02_Basics_of_Python.ipynb
@@ -1368,7 +1368,8 @@
         "$π = 4n_c / n$  \n",
         "となるからです。ダーツを投げるには乱数を使います。(つまり、`import random`が必要です。)  \n",
         "`random.random() --- [0.0,1.0]の範囲の浮動小数点数を生成`  \n",
-        "投げたダーツが正方形の中に落ちる位置`(x,y)`をそれぞれ乱数で与えます。そして、$x^2 + y^2$ が1より小さければ、円の中に落ちたということになるので、`nc`を1増やします。ダーツを投げる回数を入力して、円周率を求めるプログラムを作りなさい。"
+        "投げたダーツが正方形の中に落ちる位置`(x,y)`をそれぞれ乱数で与えます。そして、$x^2 + y^2$ が1より小さければ、円の中に落ちたということになるので、`nc`を1増やします。ダーツを投げる回数を入力して、円周率を求めるプログラムを作りなさい。  \n",
+        "![import](https://wakuwakubank.imgix.net/S3Doc/e9/f5/3f/2fbeb2bf415f02353cdf71ba66e08190e0cce5c6df7ac7b119d0d5d7e0)"
       ],
       "metadata": {
         "id": "_Ur_LdoaclXi"
