Colaboratory を使用して作成しました

--- a/Chainer_Tutorials_02_Basics_of_Python.ipynb
+++ b/Chainer_Tutorials_02_Basics_of_Python.ipynb
@@ -917,7 +917,7 @@
       "cell_type": "code",
       "source": [
         "for i in range(3):\n",
-        "    print('{}さん'.format(names[i]))"
+        "    print(f'{names[i]}さん')"
       ],
       "execution_count": null,
       "outputs": []
@@ -954,7 +954,7 @@
       "cell_type": "code",
       "source": [
         "for i in range(len(names)):\n",
-        "    print('{}さん'.format(names[i]))"
+        "    print(f'{names[i]}さん')"
       ],
       "execution_count": null,
       "outputs": []
@@ -985,7 +985,7 @@
       "source": [
         "# リストをイテラブルオブジェクトに指定\n",
         "for name in names:\n",
-        "    print('{}さん'.format(name))"
+        "    print(f'{name}さん')"
       ],
       "execution_count": null,
       "outputs": []
