Colaboratory を使用して作成しました

--- a/NDB_open_data_excel2csv.ipynb
+++ b/NDB_open_data_excel2csv.ipynb
@@ -6,7 +6,7 @@
       "name": "NDB_open_data_excel2csv.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMObVWNofds/4cE8uBmry2h",
+      "authorship_tag": "ABX9TyOT7U+SSzKe6jgvEw5FNOCg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "IR_6qHXYqhum",
-        "outputId": "97a0661f-d093-441c-fa21-c6b5913c8676"
+        "outputId": "2bb6da93-29ca-4698-8151-21e033cdcd4e"
       },
       "outputs": [
         {
@@ -62,17 +62,7 @@
       "source": [
         "url = 'https://www.mhlw.go.jp/content/12400000/000821450.xlsx'\n",
         "r = requests.get(url, allow_redirects=True)\n",
-        "wb = openpyxl.open(BytesIO(r.content))"
-      ],
-      "metadata": {
-        "id": "xzGlijVqqo_m"
-      },
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "wb = openpyxl.open(BytesIO(r.content))\n",
         "ws = wb.worksheets[0]\n",
         "ws['A1'].value"
       ],
@@ -81,10 +71,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 53
         },
-        "id": "HI0BfMjus3Cs",
-        "outputId": "b65bf1ef-6425-4557-a1f2-6da74aa69f67"
+        "id": "xzGlijVqqo_m",
+        "outputId": "9860cb9d-d703-4b9a-f563-ba7271d6e448"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -97,7 +87,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -105,17 +95,8 @@
       "cell_type": "code",
       "source": [
         "data_cells = ws['A5:BA1319']\n",
-        "cols = [cell.value.replace('\\n', '') for cell in ws['A3:F3'][0] + ws['G4:BA4'][0]]"
-      ],
-      "metadata": {
-        "id": "2Fjs9QaHuTWt"
-      },
-      "execution_count": 4,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "cols = [cell.value.replace('\\n', '') for cell in ws['A3:F3'][0] + ws['G4:BA4'][0]]\n",
+        "\n",
         "data = list()\n",
         "tmp_cls_code = ''\n",
         "tmp_cls_name = ''\n",
@@ -128,7 +109,7 @@
       "metadata": {
         "id": "hbmOG0IPvAxq"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -143,9 +124,9 @@
           "height": 1000
         },
         "id": "y9puUKd3uASH",
-        "outputId": "48464bab-a418-40b0-d95e-56ddbd299dba"
+        "outputId": "9b0a29f7-65c8-4586-c564-72fefc202f81"
       },
-      "execution_count": 20,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,7 +157,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-65b4b522-df3e-40ba-acab-37ea97469b8a\">\n",
+              "  <div id=\"df-58c25e5f-91a6-4b46-b364-9fa9fbc329e8\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -344,7 +325,7 @@
               "</table>\n",
               "<p>5 rows × 53 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-65b4b522-df3e-40ba-acab-37ea97469b8a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-58c25e5f-91a6-4b46-b364-9fa9fbc329e8')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -395,12 +376,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-65b4b522-df3e-40ba-acab-37ea97469b8a button.colab-df-convert');\n",
+              "          document.querySelector('#df-58c25e5f-91a6-4b46-b364-9fa9fbc329e8 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-65b4b522-df3e-40ba-acab-37ea97469b8a');\n",
+              "          const element = document.querySelector('#df-58c25e5f-91a6-4b46-b364-9fa9fbc329e8');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -423,7 +404,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 4
         }
       ]
     },
@@ -435,7 +416,7 @@
       "metadata": {
         "id": "Y-WXMIG6ZXka"
       },
-      "execution_count": 21,
+      "execution_count": 5,
       "outputs": []
     }
   ]
