Colaboratory を使用して作成しました

--- a/Chainer_Tutorials_02_Basics_of_Python.ipynb
+++ b/Chainer_Tutorials_02_Basics_of_Python.ipynb
@@ -47,6 +47,13 @@
         "オリジナルから一部改変  \n",
         "original: https://colab.research.google.com/github/chainer/tutorials/blob/master/ja/02_Basics_of_Python.ipynb#scrollTo=OuwnCcupv9cZ\n",
         "\n",
+        "# はじめに\n",
+        "\n",
+        "プログラミングで大事になるのは検索能力（ググり力）なので覚えなくて大丈夫です！！！！  \n",
+        "基本的な課題は日本語にも情報がありますが、英語で検索すると見つかりやすいことがあります  \n",
+        "https://www.google.com/?hl=en&gl=us\n",
+        "\n",
+        "\n",
         "# Python 入門\n",
         "\n",
         "本章では、プログラミング言語 Python の基礎的な文法を学んでいきます。\n",
@@ -427,37 +434,6 @@
       "outputs": []
     },
     {
-      "metadata": {
-        "id": "g3BdGDJaIfEr"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "一方、`.5` と書くと、これは `0.5` の略記と解釈されることに注意してください。"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "aXpxR7WmIfEs"
-      },
-      "cell_type": "code",
-      "source": [
-        "type(.5)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "enBKbL9fIfEx"
-      },
-      "cell_type": "code",
-      "source": [
-        "print(.5)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "code",
       "source": [
         "# イコール2つは左右が等しいか否かを判定\n",
@@ -556,8 +532,7 @@
         "リストの各要素へアクセスする方法はいくつかあります。\n",
         "最も簡単な方法は `[]` を使ってアクセスしたい要素番号を指定して、リストから値を取り出したり、その位置の値を書き換えたりする方法です。\n",
         "ここで、注意が必要な点として、Python では先頭の要素のインデックス番号が `0` である点があります。\n",
-        "インデックス番号 `1` は 2 番目の要素を指します。\n",
-        "![list](https://www.self-study-blog.com/wp-content/uploads/2020/10/python-list-slice-index-1024x576.jpg)"
+        "インデックス番号 `1` は 2 番目の要素を指します。"
       ]
     },
     {
@@ -917,7 +892,7 @@
       "cell_type": "code",
       "source": [
         "for i in range(3):\n",
-        "    print(f'{names[i]}さん')"
+        "    print('{}さん'.format(names[i]))"
       ],
       "execution_count": null,
       "outputs": []
@@ -954,7 +929,7 @@
       "cell_type": "code",
       "source": [
         "for i in range(len(names)):\n",
-        "    print(f'{names[i]}さん')"
+        "    print('{}さん'.format(names[i]))"
       ],
       "execution_count": null,
       "outputs": []
@@ -985,7 +960,7 @@
       "source": [
         "# リストをイテラブルオブジェクトに指定\n",
         "for name in names:\n",
-        "    print(f'{name}さん')"
+        "    print('{}さん'.format(name))"
       ],
       "execution_count": null,
       "outputs": []
@@ -1368,8 +1343,7 @@
         "$π = 4n_c / n$  \n",
         "となるからです。ダーツを投げるには乱数を使います。(つまり、`import random`が必要です。)  \n",
         "`random.random() --- [0.0,1.0]の範囲の浮動小数点数を生成`  \n",
-        "投げたダーツが正方形の中に落ちる位置`(x,y)`をそれぞれ乱数で与えます。そして、$x^2 + y^2$ が1より小さければ、円の中に落ちたということになるので、`nc`を1増やします。ダーツを投げる回数を入力して、円周率を求めるプログラムを作りなさい。  \n",
-        "![import](https://wakuwakubank.imgix.net/S3Doc/e9/f5/3f/2fbeb2bf415f02353cdf71ba66e08190e0cce5c6df7ac7b119d0d5d7e0)"
+        "投げたダーツが正方形の中に落ちる位置`(x,y)`をそれぞれ乱数で与えます。そして、$x^2 + y^2$ が1より小さければ、円の中に落ちたということになるので、`nc`を1増やします。ダーツを投げる回数を入力して、円周率を求めるプログラムを作りなさい。"
       ],
       "metadata": {
         "id": "_Ur_LdoaclXi"
