Colaboratory を使用して作成しました

--- a/task1_data_visualization.ipynb
+++ b/task1_data_visualization.ipynb
@@ -6,7 +6,7 @@
       "name": "task1_data_visualization.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPdVaptG0wGlKr1HUJuFjoA",
+      "authorship_tag": "ABX9TyMCQzS5fklYpAAVY03BK6mZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
         "id": "FShE0IZcGSI4",
         "outputId": "931cf32b-2d79-4b4e-b4ae-e0c72c5e392c"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -616,7 +616,7 @@
         "id": "YU5WfJDrQHRX",
         "outputId": "6cc2a595-6e27-4df7-cd62-752d4928e589"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -893,7 +893,7 @@
         "id": "6NCCouTtPzLx",
         "outputId": "8dcce9b4-7766-443c-a1a9-9b3f1a027d74"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1061,7 +1061,7 @@
         "id": "GAua9_saRSfH",
         "outputId": "357dd913-8a81-4ecf-ba19-037281197179"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1330,7 +1330,9 @@
         "myco_deaths = myco_death_records.iloc[0, 6:]\n",
         "print('マイコプラズマ死者数\\n', myco_deaths)\n",
         "myco_tests = myco_test_records.query('診療行為 == \"マイコプラズマ抗体定性\"').iloc[0, 6:15]\n",
-        "print('マイコプラズマ検査数\\n', myco_tests)"
+        "print('マイコプラズマ検査数\\n', myco_tests)\n",
+        "\n",
+        "# データの抽出・加工はここまでで完了です"
       ],
       "metadata": {
         "colab": {
@@ -1339,7 +1341,7 @@
         "id": "BHhxe9EbUS2p",
         "outputId": "65ffc375-091a-44e4-b9d4-e2e5bacfff0a"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1375,6 +1377,8 @@
       "cell_type": "code",
       "source": [
         "# matplotlibで可視化します\n",
+        "# コード量が多く見えますが、軸ラベルの設定などがほとんどなので、最低限必要なコード（*）は少ないです\n",
+        "# どの行をコメントアウトするとグラフがどう変わるか確認すると、コードの意味がわかりやすいです\n",
         "!pip install japanize-matplotlib\n",
         "%matplotlib inline\n",
         "import matplotlib.pyplot as plt\n",
@@ -1383,14 +1387,14 @@
         "japanize_matplotlib.japanize()\n",
         "\n",
         "sns.set(font=\"IPAexGothic\")\n",
-        "fig, ax1 = plt.subplots()\n",
-        "ax1.plot(myco_tests, label='検査数（左軸）')\n",
+        "fig, ax1 = plt.subplots()  # (*)\n",
+        "ax1.plot(myco_tests, label='検査数（左軸）')  # (*)\n",
         "ax1.set_ylim(0, 50000)\n",
         "ax1.set_ylabel('検査数')\n",
         "ax1.set_xlabel('2019年')\n",
         "\n",
-        "ax2 = ax1.twinx()  # 右軸の生成\n",
-        "ax2.bar(range(len(myco_deaths)), myco_deaths, alpha=0.4, color='green', label='死亡数（右軸）')\n",
+        "ax2 = ax1.twinx()  # (*) 右軸の生成\n",
+        "ax2.bar(range(len(myco_deaths)), myco_deaths, alpha=0.4, color='green', label='死亡数（右軸）')  (*)\n",
         "ax2.set_ylim(0, 10)\n",
         "ax2.set_ylabel('死亡数')\n",
         "\n",
@@ -1399,8 +1403,8 @@
         "handler2, label2 = ax2.get_legend_handles_labels()\n",
         "ax1.legend(handler1 + handler2, label1 + label2, loc=2, borderaxespad=0.)\n",
         "\n",
-        "plt.savefig('mycoplasma.png', dpi=300, bbox_inches='tight')\n",
-        "plt.show()"
+        "plt.savefig('mycoplasma.png', dpi=300, bbox_inches='tight')  (*)\n",
+        "plt.show()  (*)"
       ],
       "metadata": {
         "colab": {
@@ -1410,7 +1414,7 @@
         "id": "e7aHcva8qKwy",
         "outputId": "7b67e9c4-71dc-442f-da8d-7bcf8cc83697"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1512,7 +1516,7 @@
       "metadata": {
         "id": "fBIihg2LqcVC"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     }
   ]
