Colaboratory を使用して作成しました

--- a/tutorial_matplotlib.ipynb
+++ b/tutorial_matplotlib.ipynb
@@ -22,7 +22,10 @@
         "\n",
         "This notebook provides an overview of and playground for **matplotlib.pyplot**, a visualization framework for Python.\n",
         "\n",
-        "<img src=\"https://matplotlib.org/_images/anatomy.png\" width=\"500\">"
+        "<img src=\"https://matplotlib.org/_images/anatomy.png\" width=\"500\">\n",
+        "\n",
+        "original:\n",
+        "https://colab.research.google.com/github/makeabilitylab/signals/blob/master/Tutorials/IntroToMatplotlib.ipynb\n"
       ]
     },
     {
@@ -202,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "m-VtgjM4BjBX",
         "outputId": "556a4ce4-bdd4-4cbf-ec4b-6c2c81248254",
@@ -253,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "cxOkXPvfBjBa",
         "outputId": "012cb696-6dac-456d-b9c2-be60313fdf46",
@@ -357,7 +360,7 @@
         "id": "Wh8onx6KIyOG",
         "outputId": "894fbcf7-4761-47e3-8bd3-c5559282c9a5"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -404,7 +407,7 @@
         "id": "x-wkmxPwLdnj",
         "outputId": "496fea5d-e2dd-403b-b0b4-e4cc4cacef03"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -452,7 +455,7 @@
         "id": "WF8HdI88HaNb",
         "outputId": "86abb503-c598-4966-aa51-07466bcc7b95"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -490,7 +493,9 @@
         "# HOME WORK\n",
         "ここではIris（アヤメ）の花弁・がくの特徴と品種のデータセットを可視化してみます。\n",
         "\n",
-        "![iris](https://python.atelierkobato.com/wp-content/uploads/2019/05/iris_photo.png)"
+        "![iris](https://python.atelierkobato.com/wp-content/uploads/2019/05/iris_photo.png)\n",
+        "\n",
+        "https://python.atelierkobato.com/iris/\n"
       ],
       "metadata": {
         "id": "MgmQITxeNnN9"
@@ -513,7 +518,7 @@
         "id": "LQ0XFyScNmtO",
         "outputId": "80928464-85fd-4788-e0da-2e549477df39"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -749,7 +754,7 @@
         "id": "EVjGl9LZPfkQ",
         "outputId": "8fde7573-d3d0-4d52-ca87-43bc7ca79649"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -928,7 +933,7 @@
       "metadata": {
         "id": "rQPefCXFPaqg"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -979,7 +984,7 @@
       "metadata": {
         "id": "jzSDyU7LXozj"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     }
   ],
