Colaboratory を使用して作成しました

--- a/tutorial_pandas_numpy.ipynb
+++ b/tutorial_pandas_numpy.ipynb
@@ -1907,6 +1907,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# 「道」の字が含まれている県名を検索。道はカラム名でないので、クォーテーションが必要。文字列を扱う際にはengine='python'引数が必要。\n",
         "kitanihon.query('県名.str.contains(\"道\")', engine='python')"
       ],
       "metadata": {
@@ -2739,7 +2740,7 @@
         "### 1: 1世帯あたりの部屋数が最も多い3地区を表示してください\n",
         "\n",
         "計算結果の`Series`を新たなカラムとして`DataFrame`に追加できます  \n",
-        "`df['new_column'] = df['col1'] * f['col2']`"
+        "`df['new_column'] = df['col1'] * df['col2']`"
       ],
       "metadata": {
         "id": "MO_JWW3aZdGw"
