Colaboratory を使用して作成しました

--- a/tutorial_image_classification.ipynb
+++ b/tutorial_image_classification.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM7y/q0Rkb40KAtydx3PXSf",
+      "authorship_tag": "ABX9TyPXzLThaddxNOf2QEvWVp/m",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1449,6 +1449,29 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### より良い精度を目指して\n",
+        "\n",
+        "- データセットの量を増やす  \n",
+        "今回のデモでは各クラスの画像の最大量は200枚としました。一般的には学習量を増やせば精度が向上する傾向にあります。\n",
+        "\n",
+        "- 質の高いデータセットの準備  \n",
+        "画像データを可視化するとわかりますが、スクレイピングで得られた画像には全く関係ないものがある程度含まれます。これらを取り除き、質の高いデータセットを構築することが精度向上につながります。\n",
+        "\n",
+        "- データの水増し (データ拡張、Data Augmentation)  \n",
+        "データセットの量を増やすのは人力が多く骨が折れます。水増しの手法では、1枚の画像を疑似的に増幅し、枚数が増えたように見せかけます。  \n",
+        "<img src=\"https://qph.fs.quoracdn.net/main-qimg-7565e09ecc4a93604b9c26c8c2a89bf9-pjlq\" width=\"500\"><a href=\"https://www.quora.com/What-is-data-augmentation-in-CNN\">src</a>\n",
+        "\n",
+        "- モデルの変更  \n",
+        "VGG16は2014年に開発されたモデルで古いため、よりよいモデルが多く開発されています。   \n",
+        "代表的なもの: ResNet (2015), EfficientNet (2019)"
+      ],
+      "metadata": {
+        "id": "pZHsJ_oZZdAy"
+      }
     }
   ]
 }
