Colaboratory を使用して作成しました

--- a/tutorial_image_classification.ipynb
+++ b/tutorial_image_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "tutorial_image_classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOQj2qAEeNISWQuOEVM/Kui",
+      "authorship_tag": "ABX9TyPO71/ioSp6uupicdUiIpnK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -149,7 +149,7 @@
         "imgs_cat = list()\n",
         "imgs_dog = list()\n",
         "\n",
-        "for img_list, img_dir in ((imgs_cat, './cat'), (imgs_dog, './dog')):\n",
+        "for img_list, img_dir in ((imgs_cat, class1_name), (imgs_dog, class2_name)):\n",
         "  # 画像パス一つずつを処理\n",
         "  for impath in Path(img_dir).iterdir():\n",
         "    # 画像読み込み: cv2.imread()\n",
@@ -231,7 +231,7 @@
       "metadata": {
         "id": "xURaDAa1Ss0i"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
