Colaboratory を使用して作成しました

--- a/Basics_of_Python.ipynb
+++ b/Basics_of_Python.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Basics_of_Python.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
       "private_outputs": true,
       "include_colab_link": true
     },
@@ -37,6 +36,40 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/fukuta-takenaka/pub_colab/blob/main/Basics_of_Python.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip3 install ColabTurtle -q\n",
+        "from ColabTurtle.Turtle import *\n",
+        "\n",
+        "initializeTurtle(initial_speed=10)\n",
+        "color('yellow')\n",
+        "bgcolor('lightgray')\n",
+        "\n",
+        "min_length=15\n",
+        "\n",
+        "def draw_branch(l, w):\n",
+        "    left(15)\n",
+        "    draw_stick(l, w)\n",
+        "    right(30)\n",
+        "    draw_stick(l, w)\n",
+        "    left(15)\n",
+        "  \n",
+        "def draw_stick(l, w):\n",
+        "    width(w)\n",
+        "    forward(l)\n",
+        "    if min_length < l:\n",
+        "        draw_branch(math.ceil(l*0.8), math.ceil(w*0.7))\n",
+        "    backward(l)\n",
+        "\n",
+        "draw_branch(50, 10)"
+      ],
+      "metadata": {
+        "id": "tQeD02U3KM6z"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "metadata": {
@@ -272,29 +305,9 @@
       },
       "cell_type": "code",
       "source": [
-        "a = 1"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "qCdjuQqNv9ac"
-      },
-      "cell_type": "code",
-      "source": [
-        "b = 1.2"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "VLMovMgnv9ae"
-      },
-      "cell_type": "code",
-      "source": [
-        "c = 'Chainer'"
+        "a = 1\n",
+        "b = 1.2\n",
+        "c = 'Python'"
       ],
       "execution_count": null,
       "outputs": []
@@ -358,89 +371,56 @@
       ]
     },
     {
-      "metadata": {
-        "id": "Chdmx6HGIfEV"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "Python では、`.` を含まない連続した数字を `int`、直前・直後も含め `.` が含まれる連続した数字を `float` だと自動的に解釈します。\n",
-        "例えば、`7` や `365` は `int` ですが、`2.718`、`.25`、`10.` などは `float` になります。\n",
-        "\n",
-        "実数の `0` は `0.0` とも `.0` とも `0.` とも書くことができます。"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "sUKUmRgwIfEY"
-      },
       "cell_type": "code",
       "source": [
-        "type(0)"
+        "a + a  # int と int"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "metadata": {
-        "id": "VOiscn8OIfEc"
+        "id": "MsblAns5Ieib"
       },
-      "cell_type": "code",
-      "source": [
-        "type(0.)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "442-_TpmIfEf"
-      },
-      "cell_type": "code",
-      "source": [
-        "type(.0)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "by0V-W7nIfEj"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "例えば、実数の `5` は以下のように書くことができます。"
-      ]
-    },
-    {
-      "metadata": {
-        "id": "uUYCOBaAIfEj"
-      },
-      "cell_type": "code",
-      "source": [
-        "type(5.0)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "y26NMdQ2IfEo"
-      },
-      "cell_type": "code",
-      "source": [
-        "type(5.)"
-      ],
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# イコール2つは左右が等しいか否かを判定\n",
-        "5 == .5"
+        "a + b  # int と float"
       ],
       "metadata": {
-        "id": "4PxEX801CfpY"
+        "id": "m3XWcDwgInW1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a + c  # int と str"
+      ],
+      "metadata": {
+        "id": "q1-lWqaLIodK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "c + 'Basics'  # str と str"
+      ],
+      "metadata": {
+        "id": "xZQUrXGZJOxm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1 + 2 - 3 * 4 / 5  # 四則演算"
+      ],
+      "metadata": {
+        "id": "IycKEmnKJtMx"
       },
       "execution_count": null,
       "outputs": []
