Colaboratory を使用して作成しました

--- a/tutorial_image_classification.ipynb
+++ b/tutorial_image_classification.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "tutorial_image_classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPO71/ioSp6uupicdUiIpnK",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyPqPawKD0JtOZAWiLtyirpn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -519,23 +520,10 @@
         "print(output.numpy())"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "aBnxRQ-Ke0t3",
-        "outputId": "2a5c32af-e514-47ec-b4e3-8b0c2f721a8a"
+        "id": "aBnxRQ-Ke0t3"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "tf.Tensor([[1. 0.]], shape=(1, 2), dtype=float32)\n",
-            "[[1. 0.]]\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -554,23 +542,10 @@
         "print('犬である確率:', f'{vector[1]:.3f}')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DO5lCpEsgh3p",
-        "outputId": "de16b804-820a-4334-afef-8a3b35cd998e"
+        "id": "DO5lCpEsgh3p"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "猫である確率: 1.000\n",
-            "犬である確率: 0.000\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -638,26 +613,10 @@
         "confmat"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "EzqMpcGp5EkV",
-        "outputId": "c8cdc178-edb2-40dc-b99b-a4d343eaec3a"
+        "id": "EzqMpcGp5EkV"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[24, 11],\n",
-              "       [11, 22]], dtype=int32)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 97
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -771,6 +730,51 @@
       "metadata": {
         "cellView": "form",
         "id": "Kfig0nYWL8VW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### PCにある画像を判定"
+      ],
+      "metadata": {
+        "id": "XPOol_lklPM0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import files\n",
+        "x = files.upload()\n",
+        "if len(x) > 1:\n",
+        "  raise ValueError('ファイルは1つだけアップロードして下さい')\n",
+        "\n",
+        "k = list(x.keys())[0]\n",
+        "img = cv2.imdecode(np.frombuffer(x[k], dtype=np.uint8), cv2.IMREAD_UNCHANGED)\n",
+        "\n",
+        "if img is None:\n",
+        "  raise ValueError('対応していないファイルのようです')\n",
+        "\n",
+        "if img.shape[-1] == 4:\n",
+        "  img = img[..., :3]\n",
+        "\n",
+        "X = cv2.resize(img, (img_size, img_size))\n",
+        "X = ((X.astype(np.float32) / 255.) - 0.5) * 2\n",
+        "X = X[np.newaxis]\n",
+        "y = model.predict(X)\n",
+        "label = labels[np.argmax(y[0])]\n",
+        "score = np.max(y) * 100\n",
+        "\n",
+        "plt.imshow(img[..., ::-1])\n",
+        "plt.axis(\"off\")\n",
+        "plt.show()\n",
+        "\n",
+        "print(f'これは {score: .1f}% 「{label}」 です！')"
+      ],
+      "metadata": {
+        "id": "qxXVWlPNlKV9"
       },
       "execution_count": null,
       "outputs": []
